[project]
name = "aiagentproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "inngest>=0.5.18",
    "llama-index-core>=0.14.22",
    "llama-index-embeddings-google-genai>=0.5.1",
    "llama-index-llms-google-genai>=0.9.5",
    "llama-index-readers-file>=0.6.0",
    "openai>=2.41.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
